@@ -3732,9 +3732,6 @@
 	"dberr-again": "Try waiting a few minutes and reloading.",
 	"dberr-info": "(Cannot access the database: $1)",
 	"dberr-info-hidden": "(Cannot access the database)",
-	"dberr-usegoogle": "You can try searching via Google in the meantime.",
-	"dberr-outofdate": "Note that their indexes of our content may be out of date.",
-	"dberr-cachederror": "This is a cached copy of the requested page, and may not be up to date.",
 	"htmlform-invalid-input": "There are problems with some of your input.",
 	"htmlform-select-badoption": "The value you specified is not a valid option.",
 	"htmlform-int-invalid": "The value you specified is not an integer.",
